# DNA_Sample_Manager

./: .gitignore  CLAUDE.md  README.md  analyze_positions.py  check_data.py  import_data.py  import_individuals.py  import_individuals_fast.py  import_tubes_from_mysql.py  import_tubes_from_mysql_v2.py  pyproject.toml  quick_test.py  recreate_db_with_indexes.py  reimport_tubes_boxes.py  run.sh  schema.dot  test_tubes.py  test_tubes_api.py
src/dna_sample_manager/: __init__.py  __main__.py  app.py  cli.py
src/dna_sample_manager/templates/: admin_users.html  base.html  boxes.html  history.html  index_new.html  individuals.html  login.html  samples.html  sujets.html  tubes.html
